--- a/ads/jesusislordchurchad.html
+++ b/ads/jesusislordchurchad.html
@@ -18,7 +18,7 @@ body {
 <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 
-<body><!-- InstanceBeginEditable name="ad" --><em><img src="eddyfram.jpg" width="993" height="1290" alt="Eddy Farms Family Conference Retreate and Getaway" /></em><!-- InstanceEndEditable -->
+<body><!-- InstanceBeginEditable name="ad" --><em><img src="love-express-ad-half-page-color-sept-jesus-is-lord-church.jpg" width="1000" height="639" alt="Jesus is Lord" /></em><!-- InstanceEndEditable -->
 </body>
 
 <!-- InstanceEnd --></html>
