--- a/ads/mt-olivead.html
+++ b/ads/mt-olivead.html
@@ -18,7 +18,7 @@ body {
 <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 
-<body><!-- InstanceBeginEditable name="ad" --><em><img src="eddyfram.jpg" width="993" height="1290" alt="Eddy Farms Family Conference Retreate and Getaway" /></em><!-- InstanceEndEditable -->
+<body><!-- InstanceBeginEditable name="ad" --><img src="mg-olive.jpg" alt="" width="994" height="1302" /><!-- InstanceEndEditable -->
 </body>
 
 <!-- InstanceEnd --></html>
