--- a/catalytic-learders-maximize-potential-at-movement-day-2015.html
+++ b/catalytic-learders-maximize-potential-at-movement-day-2015.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html><!-- InstanceBegin template="/Templates/article.dwt" codeOutsideHTMLIsLocked="false" -->
+<html><!-- InstanceBegin template="/Templates/article_features.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Focus On The Children:</title>
+<title>Catalytic Leaders Maximize Leadership</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -47,7 +47,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           </ul>
 		  <div style="background-image:url(images/gui_login_divide_bg.jpg); height:6px; background-repeat:repeat-x; "></div> 
         </div> 
-        <div id="nav_adspace"> <!-- InstanceBeginEditable name="adSpace" -->EditRegion5<!-- InstanceEndEditable --></div> 
+        <div id="nav_adspace"> <!-- InstanceBeginEditable name="adSpace" -->&nbsp;<!-- InstanceEndEditable --></div> 
       </div></td> 
     <td width="653" background="images/teststrip.jpg" bgcolor="#DDD6C4" style="vertical-align:top;"><div class="container"> 
         <div id="loginspace"> </div> 
@@ -55,7 +55,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           <div id="cat_borderleft"></div> 
           <!-- InstanceBeginEditable name="pagelabel" -->
       <div class="style1" id="cat_lable">
-        <p class="pageheadertxt">FEATURES</p>
+        <p class="pageheadertxt">Features</p>
       </div>
       <!-- InstanceEndEditable --> 
           <div id="cat_border"></div> 
@@ -75,18 +75,35 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
             <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
                <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
-            <div id="articlepic"><img style="border:1px #666 solid" src="authors/charlottehall.jpg" width="100" height="125" alt="Charlotte Hall" /></div>
-            
-            <h4 id="articleTitle">Focus On The Children:            </h4>
-            <h4 class="qa">Practicing An Attitude of Gratitude</h4>
-            <div id="authorname">
-              <p>by Elder Charlotte Hall</p>
-            </div>
-
-            <p align="center">Hello Beloved! This is the Day the Lord HatH Made. Let us  Rejoice and Be Glad in it! Is this your mindset today or in this phase  of your life? Are you really glad or are you mad or perhaps sad. In everything  give thanks for this is the will of God concerning you. 1 Thessalonians. I urge  you to make a choice. Choose to rejoice, choose to be thankful, choose to be  grateful. Choose to have and demonstrate an Attitude of Gratitude. Yes, as I  used to tell myself &ldquo;Just fake till you make it&rdquo;, as I entered a classroom  filled with rambunctious special needs students. I did just that and it worked every  time. I learned to practice gratitude. I was truly glad to have a job, period!</p>
-            <p>Zig  Ziglar was a Christian motivational speaker and mentor to thousands. Several  decades ago he was the best-know and most loved speaker in the world. He  created the popular phrase, &ldquo;Have an attitude of gratitude.&rdquo; Those who knew him  well said he seemed to have an aura of happiness. &ldquo;Completely genuine.&rdquo; Many  said they&rsquo;d never met anyone more grateful than Zig. (Find out more about the  man I&rsquo;ll call the Apostle of gratitude, google Zig Ziglar). And no, Mr. Ziglar  did not have an easy life. But he found the key to God&rsquo;s joy; a grateful heart.  He started out dirt poor. His father died when he was six, leaving his mother  to raise eleven children alone. Despite their poverty, his mo&shy;ther instilled a  strong work ethic in her children and raised them to believe that both she and  God loved them. She also required her children to practice saying &ldquo;please&rdquo; and  &ldquo;thank you.&rdquo; Her lessons stuck with her children and as a result of her formula  of work, love and faith, their difficult lives were easier. Gratitude made  their life enjoyable. Bro. Zig believed and I agree, &ldquo;When we neglect to  require our children to say &ldquo;thank you&rdquo; when someone gives them a gift or does  something for them, we raise ungrateful children who are highly unlikely to be  content. Without gratitude, happiness is rare. With gratitude, the odds for  happiness go up dramatically.</p>
-            <p>Our  attitude determines our approach and our approach determines our success of  failure. Do some of us need and attitude adjustment? Perhaps a check-up from  the neck up! Do we need to detox our &ldquo;stinkin&rsquo; thinkin?&rdquo; Selah. Giving thanks  brings joy, I encourage you to try it. Get yourself a notebook or a journal and  entitle it your &ldquo;Attitude Journal&rdquo; and start your day by making entries, as  many as come to mind. I think you&rsquo;ll be surprised at the number you reach and  the effects your thoughts and entries have on your mood, attitude if you will,  a real antidepressant. Depression, discouragement and gratitude can&rsquo;t dwell in  the same space. All manner of darkness has to go. So beloved, don&rsquo;t argue or  think about it, &ldquo;Just do it!&rdquo; Count your blessings. Jot them down. At least  stop and think of as many as you can that you&rsquo;re thankful for right now.It  worked for me and others and it will certainly work for you. If you want to  feel hap&shy;py, try on an attitude of gratitude for a change in your mood, your  outlook and you.</p>
-            <p><strong><em>Portions  of this article taken from Bellefnet.com. Charlotte A. Hall, Founder &amp;  President, Emanuel Pra&shy;yer Ministries Outreach, Post Office Box 210-054,  Brooklyn, NY </em></strong><strong><em>11221 (917)  774-8874.</em></strong></p></div><!-- InstanceEndEditable --> 
+            <div id="articlepic"><img src="images/dr.mac-pier.jpg" alt="" width="150" height="225" id="authorpic" /> </div>
+            <h4 id="articleTitle">Catalytic Leaders Maximize Leadership
+              Potential at Movement Day 2015</h4>
+              <div id="authorname">Rev. Mac Pier
+                <!--SECTION LEFT END-->
+ </div>
+              <p >For the past five years <strong><u>Movement  Day</u></strong> has been catalyzing leadership teams to serve the world&rsquo;s largest  cities more effectively by advancing high-level, city-changing collaborative  partnerships. On <strong>October 29, 2015</strong>, leaders will once again gather at the  New York Hilton Midtown to advance Gospel movements in cities across the globe  by facilitating unity and collaboration among Christian lea&shy;ders to address  today&rsquo;s ur- ban issues and maximize their potential. In so doing, the event  seeks to bridge the spiritual, economic and ra&shy;cial divides in our cities.</p>
+              <p><strong>Mac  Pier</strong>, founder and CEO of <strong><u>The New York City Leadership Center</u></strong> comments, &ldquo;The history and theory of missions tell us that whole cities or  cultures can be reached with the Gospel. &lsquo;Reached&rsquo; doesn&rsquo;t mean that everyone  becomes a Christian, but that a &lsquo;tipping point&rsquo; can be achieved where  Christianity begins to have a disproportionate effect on the population&rsquo;s  values and beliefs, and their faith grows spontaneously, without external  control.&rdquo;</p>
+              <p>Plenary  speakers for this year&rsquo;s gathering include,</p>
+              <p>&bull; <strong>Mac Pier</strong>, founder &amp; CEO, The New  York City Leadership Center, NYC</p>
+              <p>&bull; <strong>Tim Keller</strong>, senior pastor, Redeemer  Presbyterian Church, New York City</p>
+              <p>&bull; <strong>Drew Hyun</strong>, pastor Hope Church, New  York City</p>
+              <p>&bull; <strong>Noel Castellanos</strong>, CEO of Community  Development Association, Chicago</p>
+              <p>&bull; <strong>Brenda Salter</strong>, McNeil associate  professor Seattle Pacific University, Seattle</p>
+              <p>&bull; <strong>Gabriel Salguero</strong>, president, National  Latino Evangelical Coalition</p>
+              <p>&bull; <strong>Grant Skeldon</strong>, founder and director  of INITIATIVE Network, Dallas</p>
+              <p>&bull; <strong>Jon Tyson</strong>, founding pastor of Trinity  Grace Church, New York</p>
+              <p>&bull; <strong>Chelsea Vaughn</strong> executive director,  internal relations of INITIATIVE, Dallas</p>
+              <p>&bull; <strong>Froswa&rsquo; Booker-Drew</strong>, national  community engagement director, World Vision, US Programs, Dallas</p>
+              <p>&bull; <strong>Paris Lofaro</strong>, Relations Development  &amp; Media Mana&shy;ger</p>
+              <p>&bull; <strong>Ray Villegas</strong>, Director, East Harlem  Affiliate</p>
+              <p>&bull; <strong>Adam Durso</strong>, Executive Pastor, Christ  Tabernacle</p>
+              <p>&bull; <strong>A. R. Bernard</strong>, Pastor Christian  Cultural Center Brooklyn</p>
+              <p>&bull; <strong>Jamaal Bernard</strong>, COO Christian  Cultural Center Brooklyn</p>
+              <p>Following  the morning plenary, the sharing of best practices and the fostering of  collaboration between lea&shy;ders is facilitated in the <em>interactive learning  tracks</em> during the afternoon of Movement Day. </p>
+              <p>Movement  Day attendee Megan Coleman of NYC Relief in Elizabeth, NJ comments about her  experience at Movement Day 2014.&nbsp; &ldquo;It&rsquo;s  awesome to be made aware of organizations around the country that are moving to  provide for &lsquo;the least of these,&rsquo; as well as receiving encouragement from those  that beat with the same heart and passions. I also appreciated the  conversations around the table with my fellow attendees during the interactive  tracks, bringing the reality of life on the street and how we are reaching out  to help as organizations and leaders across the country.&rdquo;<strong><em>&nbsp; Join the Movement; Early Bird Registration  Ends Sept.14th; www.MovementDay.com; Oct. 29, 2015, 8am&ndash;5pm @ NY Hilton  Midtown, 1335 Avenue of the Americas, NY, NY.</em></strong></p>
+</div>
+          <div id="body_adspace"></div>
+          <!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
             </div> 
