--- a/east-coast-relaod-ny-2015.html
+++ b/east-coast-relaod-ny-2015.html
@@ -2,7 +2,7 @@
 <html><!-- InstanceBegin template="/Templates/article.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Focus On The Children:</title>
+<title>Welcome to the Love Express</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -47,7 +47,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           </ul>
 		  <div style="background-image:url(images/gui_login_divide_bg.jpg); height:6px; background-repeat:repeat-x; "></div> 
         </div> 
-        <div id="nav_adspace"> <!-- InstanceBeginEditable name="adSpace" -->EditRegion5<!-- InstanceEndEditable --></div> 
+        <div id="nav_adspace"> <!-- InstanceBeginEditable name="adSpace" -->&nbsp;<!-- InstanceEndEditable --></div> 
       </div></td> 
     <td width="653" background="images/teststrip.jpg" bgcolor="#DDD6C4" style="vertical-align:top;"><div class="container"> 
         <div id="loginspace"> </div> 
@@ -55,7 +55,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           <div id="cat_borderleft"></div> 
           <!-- InstanceBeginEditable name="pagelabel" -->
       <div class="style1" id="cat_lable">
-        <p class="pageheadertxt">FEATURES</p>
+        <p class="pageheadertxt">events</p>
       </div>
       <!-- InstanceEndEditable --> 
           <div id="cat_border"></div> 
@@ -73,20 +73,20 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
         <div id="gui_borderleft"> 
           <div id="gui_borderright"> 
             <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
-               <!--SECTION LEFT BEGIN-->
+        <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
-            <div id="articlepic"><img style="border:1px #666 solid" src="authors/charlottehall.jpg" width="100" height="125" alt="Charlotte Hall" /></div>
-            
-            <h4 id="articleTitle">Focus On The Children:            </h4>
-            <h4 class="qa">Practicing An Attitude of Gratitude</h4>
-            <div id="authorname">
-              <p>by Elder Charlotte Hall</p>
-            </div>
-
-            <p align="center">Hello Beloved! This is the Day the Lord HatH Made. Let us  Rejoice and Be Glad in it! Is this your mindset today or in this phase  of your life? Are you really glad or are you mad or perhaps sad. In everything  give thanks for this is the will of God concerning you. 1 Thessalonians. I urge  you to make a choice. Choose to rejoice, choose to be thankful, choose to be  grateful. Choose to have and demonstrate an Attitude of Gratitude. Yes, as I  used to tell myself &ldquo;Just fake till you make it&rdquo;, as I entered a classroom  filled with rambunctious special needs students. I did just that and it worked every  time. I learned to practice gratitude. I was truly glad to have a job, period!</p>
-            <p>Zig  Ziglar was a Christian motivational speaker and mentor to thousands. Several  decades ago he was the best-know and most loved speaker in the world. He  created the popular phrase, &ldquo;Have an attitude of gratitude.&rdquo; Those who knew him  well said he seemed to have an aura of happiness. &ldquo;Completely genuine.&rdquo; Many  said they&rsquo;d never met anyone more grateful than Zig. (Find out more about the  man I&rsquo;ll call the Apostle of gratitude, google Zig Ziglar). And no, Mr. Ziglar  did not have an easy life. But he found the key to God&rsquo;s joy; a grateful heart.  He started out dirt poor. His father died when he was six, leaving his mother  to raise eleven children alone. Despite their poverty, his mo&shy;ther instilled a  strong work ethic in her children and raised them to believe that both she and  God loved them. She also required her children to practice saying &ldquo;please&rdquo; and  &ldquo;thank you.&rdquo; Her lessons stuck with her children and as a result of her formula  of work, love and faith, their difficult lives were easier. Gratitude made  their life enjoyable. Bro. Zig believed and I agree, &ldquo;When we neglect to  require our children to say &ldquo;thank you&rdquo; when someone gives them a gift or does  something for them, we raise ungrateful children who are highly unlikely to be  content. Without gratitude, happiness is rare. With gratitude, the odds for  happiness go up dramatically.</p>
-            <p>Our  attitude determines our approach and our approach determines our success of  failure. Do some of us need and attitude adjustment? Perhaps a check-up from  the neck up! Do we need to detox our &ldquo;stinkin&rsquo; thinkin?&rdquo; Selah. Giving thanks  brings joy, I encourage you to try it. Get yourself a notebook or a journal and  entitle it your &ldquo;Attitude Journal&rdquo; and start your day by making entries, as  many as come to mind. I think you&rsquo;ll be surprised at the number you reach and  the effects your thoughts and entries have on your mood, attitude if you will,  a real antidepressant. Depression, discouragement and gratitude can&rsquo;t dwell in  the same space. All manner of darkness has to go. So beloved, don&rsquo;t argue or  think about it, &ldquo;Just do it!&rdquo; Count your blessings. Jot them down. At least  stop and think of as many as you can that you&rsquo;re thankful for right now.It  worked for me and others and it will certainly work for you. If you want to  feel hap&shy;py, try on an attitude of gratitude for a change in your mood, your  outlook and you.</p>
-            <p><strong><em>Portions  of this article taken from Bellefnet.com. Charlotte A. Hall, Founder &amp;  President, Emanuel Pra&shy;yer Ministries Outreach, Post Office Box 210-054,  Brooklyn, NY </em></strong><strong><em>11221 (917)  774-8874.</em></strong></p></div><!-- InstanceEndEditable --> 
+            <div id="articlepic"><img src="images/ralph-castillo.jpeg" alt="" name="authorpic" width="145" height="148" id="authorpic" /><img src="images/jeremy-dei-rio.jpeg" alt="" name="authorpic2" width="131" height="148" id="authorpic2" /><img src="images/daniel-sanabria.jpg" alt="" name="authorpic4" width="149" height="148" id="authorpic4" /><img src="images/angie-rose.jpg" alt="" name="authorpic3" width="133" height="148" id="authorpic3" /></div>
+            <h4 id="articleTitle">East Coast - RELOAD NY 2015</h4>
+              <div id="authorname">  By Melissa Alcorn, Executive Director, and James Winans, Manager of Institutional Giving.
+                <!--SECTION LEFT END-->
+ </div>
+              <p >U<b>rban Youth Wor&shy;kers  Institute present</b> <b>East Coast RE&shy;LOAD (NY) 2015</b> on <b>Satur&shy;day,  September 12th</b> @ <b>8am-4:30pm</b> @ <b>Bay Ridge Christian Center</b>,  6324 7th Avenue, Brooklyn, NY.</p>
+              <p>Reload,  A one-day training event that teaches best practices in youth ministry and  connects you with like-minded leaders who share your calling and understand  your challenges. Whether you are a veteran, seasoned, or a brand new youth  worker, you and your team will be inspired, equipped and refreshed by this  leadership development experience.</p>
+              <p>Rate:$25/Pre-Re&shy;gis&shy;tra&shy;tion  (Ends September 8th); $30 / At the Door.</p>
+              <p><b><i>To register or for ad&shy;ditional information please visit&nbsp; us at www.uywi.org Sponsors: Young Life  (Gotham City Region) and God Belongs In My City.</i></b></p>
+</div>
+          <div id="body_adspace"></div>
+          <!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
             </div> 
