--- a/features.htm
+++ b/features.htm
@@ -135,9 +135,27 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
 <div class="bodytxt">
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <a href="images/praying-for-children-in-college.jpg"><img src="images/praying-for-children-in-college.jpg" alt="Poem in Art (Click for larger view)" name="authorpic" width="128" height="85" id="authorpic2" /></a></div>
-                <h2>How To Pray For College-Age Kids</h2>
-                <p>One of the  blessings of living in a residential college setting is the opportunity to  learn in community. This means working through your academic learning with  others but also means learning by being in a community. It can be hard when  sinners live together in close proximity and share the stresses of school and  ...<a href="how-to-pray-for-college-age-kids.html">Read More</a>
+                  <a href="images/mens-discipleship-boot-camp.jpg"><img src="images/michael-leonard-james-headshot.jpg" alt="" name="authorpic" width="113" height="85" id="authorpic4" /></a><br>
+  </div>
+                <h2>30th Anniversary</h2>
+                <p>Wow! Has it actually been 30  years since we started this awesome ministry tool? As difficult as it is to  believe that much time has passed, I've shared before how The Love Express has  impacted my personal life. I met the young lady who would one day become my  wife of 25 years, (this September 1) and the mother of my       ...<a href="30th-anniversary.html">Read More</a><br>
+              </p>
+              
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <a href="images/mens-discipleship-boot-camp.jpg"><img src="images/racial-reconciliation-photo.jpg" alt="" name="authorpic" height="85" id="authorpic5" /></a><br>
+</div>
+                <h2>How to Actually Fight<br>
+for Racial Reconciliation</h2>
+                <p>These days, as people around the  nation become more aware of racial injustice, many young Christians of all  races are eager to be part of the solution. That&rsquo;s  great news; we need every available hand on deck! But since so many of us have  grown up in ra&shy;cially isolated communities, many...<a href="how-to-actually-fight-for-racial-reconciliation.html">Read More</a><br>
+              </p>
+              
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/dr.mac-pier.jpg" alt="" name="authorpic6" width="57" height="85" id="authorpic6" /></div>
+                <h2>Catalytic Leaders Maximize Leadership
+              Potential</h2>
+                <p>For the past five years <strong><u>Movement  Day</u></strong> has been catalyzing leadership teams to serve the world&rsquo;s largest  cities more effectively by advancing high-level, city-changing collaborative  partnerships. On <strong>October 29, 2015</strong>, leaders will once again gather at the  New York Hilton Midtown to advance Gospel movements in cities     ...<a href="catalytic-learders-maximize-potential-at-movement-day-2015.html">Read More</a>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <img src="images/shirely-caesar-jpg-photo.jpg" alt="Shirley Caesar" title="Shirley Caesar" name="authorpic" width="116" height="85" id="authorpic6" /></div>
@@ -154,13 +172,11 @@ and Mission is Evangelism </h2>
                   <img src="images/cs15facebookevent.jpg" alt="" name="authorpic" width="227" height="85" id="authorpic3" /></div>
                 <h2>Collyde Summit 2015</h2>
                 <p>Just over 3 months from now, hundreds of  belie&shy;vers, leaders and pastors with be gathering at Calvary Temple in Wayne,  NJ on <strong>September 18th</strong> and <strong>19th</strong> for <strong>Collyde Summit 2015</strong>. Collyde Summit is a gathering of passionate  believers in the NJ, NY and PA area, who love Jesus and are convicted to become  world changers. Collyde   ...<a href="collyde-summit-2015.html">Read More</a>
-<div id="articlepic">
-  <div class="photocredits2"> </div>
-                  <br>
-</div>
-                <h2>The Five Star Man</h2>
-                <p>The Five Star Man&rdquo; is a dating handbook  written for women and discusses the hazards of dating while at the same time  examines the overall stability of today&rsquo;s man. It encouragaes women to use the  dating period as a time of investigation and not just infatuation and suggest  that choices be based on self-worth and value  ...<a href="naomi-williams--the-five-star-man.html">Read More</a><br>
-                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/edith-rose-30th-anniversary.jpg" name="authorpic" height="85" id="authorpic" /></div>
+                <h2>Viewpoint: 30th Anniversary</h2>
+                <p align="center">Key people in one small room at  33rd Street and 7th Ave. <strong>Edith, Rose, Zoraida, William, Michael, Peter and  Sidney. </strong>What a family! None of us knew how to do a newspaper, but with  God&rsquo;s help we did it. Our first newspaper was eight pages and God&rsquo;s wonderful  dream for the Tri-State area came true ...<a href="rose-lictro--viewpoint-30th-anniversary.html">Read More</a></p>
 </div>
             </div>
           <!--SECTION LEFT BEGIN-->
