--- a/ads/kingdomreformationad.html
+++ b/ads/kingdomreformationad.html
@@ -18,7 +18,7 @@ body {
 <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 
-<body><!-- InstanceBeginEditable name="ad" --><em><img src="eddyfram.jpg" width="993" height="1290" alt="Eddy Farms Family Conference Retreate and Getaway" /></em><!-- InstanceEndEditable -->
+<body><!-- InstanceBeginEditable name="ad" --><img src="10x13-kingdom-reformation.jpg" width="990" height="1287" alt="Kingdom Reformation Ad" /><!-- InstanceEndEditable -->
 </body>
 
 <!-- InstanceEnd --></html>
