--- a/rose-lictro--viewpoint-30th-anniversary.html
+++ b/rose-lictro--viewpoint-30th-anniversary.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html><!-- InstanceBegin template="/Templates/article.dwt" codeOutsideHTMLIsLocked="false" -->
+<html><!-- InstanceBegin template="/Templates/article_features.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Focus On The Children:</title>
+<title>Welcome to the Love Express</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -47,7 +47,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           </ul>
 		  <div style="background-image:url(images/gui_login_divide_bg.jpg); height:6px; background-repeat:repeat-x; "></div> 
         </div> 
-        <div id="nav_adspace"> <!-- InstanceBeginEditable name="adSpace" -->EditRegion5<!-- InstanceEndEditable --></div> 
+        <div id="nav_adspace"> <!-- InstanceBeginEditable name="adSpace" -->&nbsp;<!-- InstanceEndEditable --></div> 
       </div></td> 
     <td width="653" background="images/teststrip.jpg" bgcolor="#DDD6C4" style="vertical-align:top;"><div class="container"> 
         <div id="loginspace"> </div> 
@@ -55,7 +55,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           <div id="cat_borderleft"></div> 
           <!-- InstanceBeginEditable name="pagelabel" -->
       <div class="style1" id="cat_lable">
-        <p class="pageheadertxt">FEATURES</p>
+        <p class="pageheadertxt">Features</p>
       </div>
       <!-- InstanceEndEditable --> 
           <div id="cat_border"></div> 
@@ -75,18 +75,28 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
             <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
                <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
-            <div id="articlepic"><img style="border:1px #666 solid" src="authors/charlottehall.jpg" width="100" height="125" alt="Charlotte Hall" /></div>
-            
-            <h4 id="articleTitle">Focus On The Children:            </h4>
-            <h4 class="qa">Practicing An Attitude of Gratitude</h4>
-            <div id="authorname">
-              <p>by Elder Charlotte Hall</p>
+            <div id="articlepic">
+              <h1><img src="images/edith-rose-30th-anniversary.jpg" name="authorpic" width="255" id="authorpic" /></h1>
             </div>
-
-            <p align="center">Hello Beloved! This is the Day the Lord HatH Made. Let us  Rejoice and Be Glad in it! Is this your mindset today or in this phase  of your life? Are you really glad or are you mad or perhaps sad. In everything  give thanks for this is the will of God concerning you. 1 Thessalonians. I urge  you to make a choice. Choose to rejoice, choose to be thankful, choose to be  grateful. Choose to have and demonstrate an Attitude of Gratitude. Yes, as I  used to tell myself &ldquo;Just fake till you make it&rdquo;, as I entered a classroom  filled with rambunctious special needs students. I did just that and it worked every  time. I learned to practice gratitude. I was truly glad to have a job, period!</p>
-            <p>Zig  Ziglar was a Christian motivational speaker and mentor to thousands. Several  decades ago he was the best-know and most loved speaker in the world. He  created the popular phrase, &ldquo;Have an attitude of gratitude.&rdquo; Those who knew him  well said he seemed to have an aura of happiness. &ldquo;Completely genuine.&rdquo; Many  said they&rsquo;d never met anyone more grateful than Zig. (Find out more about the  man I&rsquo;ll call the Apostle of gratitude, google Zig Ziglar). And no, Mr. Ziglar  did not have an easy life. But he found the key to God&rsquo;s joy; a grateful heart.  He started out dirt poor. His father died when he was six, leaving his mother  to raise eleven children alone. Despite their poverty, his mo&shy;ther instilled a  strong work ethic in her children and raised them to believe that both she and  God loved them. She also required her children to practice saying &ldquo;please&rdquo; and  &ldquo;thank you.&rdquo; Her lessons stuck with her children and as a result of her formula  of work, love and faith, their difficult lives were easier. Gratitude made  their life enjoyable. Bro. Zig believed and I agree, &ldquo;When we neglect to  require our children to say &ldquo;thank you&rdquo; when someone gives them a gift or does  something for them, we raise ungrateful children who are highly unlikely to be  content. Without gratitude, happiness is rare. With gratitude, the odds for  happiness go up dramatically.</p>
-            <p>Our  attitude determines our approach and our approach determines our success of  failure. Do some of us need and attitude adjustment? Perhaps a check-up from  the neck up! Do we need to detox our &ldquo;stinkin&rsquo; thinkin?&rdquo; Selah. Giving thanks  brings joy, I encourage you to try it. Get yourself a notebook or a journal and  entitle it your &ldquo;Attitude Journal&rdquo; and start your day by making entries, as  many as come to mind. I think you&rsquo;ll be surprised at the number you reach and  the effects your thoughts and entries have on your mood, attitude if you will,  a real antidepressant. Depression, discouragement and gratitude can&rsquo;t dwell in  the same space. All manner of darkness has to go. So beloved, don&rsquo;t argue or  think about it, &ldquo;Just do it!&rdquo; Count your blessings. Jot them down. At least  stop and think of as many as you can that you&rsquo;re thankful for right now.It  worked for me and others and it will certainly work for you. If you want to  feel hap&shy;py, try on an attitude of gratitude for a change in your mood, your  outlook and you.</p>
-            <p><strong><em>Portions  of this article taken from Bellefnet.com. Charlotte A. Hall, Founder &amp;  President, Emanuel Pra&shy;yer Ministries Outreach, Post Office Box 210-054,  Brooklyn, NY </em></strong><strong><em>11221 (917)  774-8874.</em></strong></p></div><!-- InstanceEndEditable --> 
+            <h4 id="articleTitle">Viewpoint: 30th Anniversary</h4>
+              <div id="authorname"><!--SECTION LEFT END--><strong>By Rose Acker Lictro </strong><strong> </strong>&amp; Edith M. Stranges (1985)</div>
+              <p align="center"><strong></strong>Key people in one small room at  33rd Street and 7th Ave. <strong>Edith, Rose, Zoraida, William, Michael, Peter and  Sidney. </strong>What a family! None of us knew how to do a newspaper, but with  God&rsquo;s help we did it. Our first newspaper was eight pages and God&rsquo;s wonderful  dream for the Tri-State area came true.</p>
+              <p>I  started in September 1985 not knowing much except how to work the phones.</p>
+              <p>Also  I was recovering from Bacterial Pneumonia in November 1985, when some  unbelievers didn&rsquo;t want me to work here but I stayed the&nbsp; course. I was completely healed in time to  cook Thanksgiving dinner thanks to the&nbsp;  prayers of the saints.</p>
+              <p>Thank  you to <strong>Pastor David N. Stranges</strong>, our spiritual overseer who said <strong>&ldquo;GO  WITH IT, DO IT, PRINT IT. YOU&rsquo;VE GOT MY BLESSINGS.&rdquo;</strong></p>
+              <p>After  a few years I star&shy;ted typing invoices making phone calls and proof reading.  Then I learned how to lay out ot the Ads of the paper. </p>
+              <p>Over  the years so many Pastors have come to our office and I wish I had a camera to  take their photos. Many came to pray for the staff and over the news paper.  What a Blessing to us. Many times we were invited to events, we try to attend  or send someone, but sometimes we couldn&rsquo;t make it. So keep asking of course.  You never know. </p>
+              <p>In  years past I have met so many brothers and sisters who became close friends to  me. I appreciate them and their faithfulness to <strong>The Love Express</strong> and their faith in us to produce an anointed paper. </p>
+              <p><strong>The Love Express</strong> is not a &ldquo;Job&rdquo; to me; it is a passion, a love for  &ldquo;Building Bridges&rdquo; to our fellow ministries, chur&shy;ches and businesses.</p>
+              <p>In  the forthcoming year, we hope to improve further in our relationship with our  brothers and sisters in the Lord. Especially in our phone calls. I admit I have  made many mistakes and acted poorly, so please forgive me and pray for me as I  am praying for you. We do believe our advertisers deserve the best we can  provide because they make up <strong>The Love Express</strong> &ldquo;good news.&rdquo; There&rsquo;s a saying &ldquo;Stick to what you love&rdquo; and we at <strong>The Love Express</strong>, Edith especially believes this with her whole heart  and so do I. </p>
+              <p><strong>We are a serious Publication to the Body of Believers.</strong></p>
+              <p>Lets Pray... </p>
+              <p>Lord with grateful hearts, you  have comforted us in our disappointments, calmed us when irritated and  strengthened us in the face of temptations and doubts. Remove all worry and  fear from us as you continue your loving watchful care over us. We praise you  Lord, Amen              </p>
+              <p align="center"><strong>SEPTEMBER 2015</strong></p>
+              <p><strong>Key  people; Edith, Rose, Deborah, William, Sehon, Shanelle, Natalie, Melville,  Peter, L.I.C, Printer, Distri&shy;butors, Writers, Pastors, Churches, Businesses,  Subscribers, Advertisers, Family and Friends.</strong></p>
+              <p>&ldquo;Thank  you all for understanding my passion for the Love Express, my Viewpoint and  Righteous Re&shy;ci&shy;pes.&rdquo;</p>
+              <p>God  bless from my heart, Rose<strong></strong></p>
+              <p><strong>HAPPY </strong><strong>30th </strong> <strong>ANNIVERSARY</strong> <strong>TO </strong><strong>THE</strong> <strong>LOVE</strong> <strong>EXPRESS</strong></p></div><!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
             </div> 
